# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./auth";
 export * from "./files";
 export * from "./settings";
+export * from "./profiles";
